Artikel second commit

--- a/blog-single-2.html
+++ b/blog-single-2.html
@@ -126,18 +126,40 @@
                                 <p>
                                     Seni membatik adalah seni tekstil yang indah dan berharga yang telah ada selama berabad-abad, dengan akar budaya yang dalam di berbagai belahan dunia. Salah satu aspek yang sering diabaikan namun sangat penting dalam seni membatik adalah pemahaman konsep asam-basa. Meskipun terlihat tidak langsung terkait, pengetahuan tentang asam dan basa adalah kunci keberhasilan dalam menghasilkan warna-warna cerah dan indah pada kain batik. Artikel ini akan membahas mengapa harus belajar asam-basa dalam proses membatik.
                                     <br>
-                                    <b>1. Pemilihan Pewarna yang Tepat</b>
-                                    <br>Salah satu alasan utama untuk memahami konsep asam-basa dalam membatik adalah pemilihan pewarna yang tepat. Berbagai zat warna memiliki sifat-sifat kimia yang berbeda. Beberapa zat warna bersifat asam, sementara yang lain bersifat basa. Kain batik juga memiliki karakteristik kimia yang berbeda, seperti keasaman atau kebasaan. Pemahaman tentang sifat-sifat ini memungkinkan seniman memilih pewarna yang sesuai dengan jenis kain yang digunakan, sehingga menghasilkan warna yang lebih cerah dan tahan lama.
-                                    <br><b>2. Mengatur Proses Pewarnaan</b>
-                                    <br>Proses pewarnaan dalam seni membatik melibatkan interaksi antara zat warna, kain, dan media pewarnaan. Konsep asam-basa memainkan peran kunci dalam mengatur proses ini. Pemilihan larutan asam atau basa yang tepat digunakan untuk mengendalikan intensitas warna, kedalaman penetrasi warna, dan perubahan warna selama proses pewarnaan. Ini memungkinkan seniman untuk menciptakan efek-efek unik dan mengendalikan hasil akhir pada kain batik.
-                                    <br><b>3. Mengembangkan Warna yang Diinginkan</b>
-                                    <br>Setelah pewarnaan awal, kain batik seringkali harus melalui tahap pengembangan warna. Ini adalah langkah penting dalam seni membatik, di mana warna-warna mendalam dan mencapai kecerahan yang diinginkan. Proses pengembangan warna ini melibatkan penggunaan larutan asam atau basa yang tepat untuk mengunci warna dan menghasilkan hasil yang lebih tahan lama.
-                                    <br><b>4. Eksperimen dengan Teknik Pewarnaan</b><br>
-                                    <img src="img/Materi/Artikel 2.1.png" class="mt-10 mb-15" alt="">
-                                    <br>Pemahaman tentang konsep asam-basa juga membuka pintu untuk eksperimen dengan teknik pewarnaan yang lebih kompleks dalam seni membatik. Seniman dapat menciptakan efek-efek khusus dengan menggunakan teknik seperti tie-dye atau shibori, yang memanfaatkan sifat-sifat asam-basa dalam proses pewarnaan. Ini memungkinkan seniman untuk menciptakan karya seni yang lebih kreatif dan unik.
-                                    <br><b>5. Keberlanjutan dan Ramah Lingkungan</b>
-                                    <br>Dalam upaya menjaga keberlanjutan dan ramah lingkungan, pengetahuan tentang asam-basa juga dapat digunakan untuk memilih pewarna yang lebih ramah lingkungan dan aman bagi lingkungan. Pewarna alami yang berasal dari tanaman atau serangga seringkali memanfaatkan sifat asam-basa dalam proses pewarnaan.
-                                    <br><b>Penutup</b>
+                                    <ol>
+                                        <li>
+                                            <p>                                    
+                                                <b>Pemilihan Pewarna yang Tepat</b>
+                                                <br>Salah satu alasan utama untuk memahami konsep asam-basa dalam membatik adalah pemilihan pewarna yang tepat. Berbagai zat warna memiliki sifat-sifat kimia yang berbeda. Beberapa zat warna bersifat asam, sementara yang lain bersifat basa. Kain batik juga memiliki karakteristik kimia yang berbeda, seperti keasaman atau kebasaan. Pemahaman tentang sifat-sifat ini memungkinkan seniman memilih pewarna yang sesuai dengan jenis kain yang digunakan, sehingga menghasilkan warna yang lebih cerah dan tahan lama.
+                                            </p>
+                                        </li>
+                                        <li>
+                                            <p>
+                                                <b>Mengatur Proses Pewarnaan</b>
+                                                <br>Proses pewarnaan dalam seni membatik melibatkan interaksi antara zat warna, kain, dan media pewarnaan. Konsep asam-basa memainkan peran kunci dalam mengatur proses ini. Pemilihan larutan asam atau basa yang tepat digunakan untuk mengendalikan intensitas warna, kedalaman penetrasi warna, dan perubahan warna selama proses pewarnaan. Ini memungkinkan seniman untuk menciptakan efek-efek unik dan mengendalikan hasil akhir pada kain batik.
+                                            </p>
+                                        </li>
+                                        <li>
+                                            <p>
+                                                <b>Mengembangkan Warna yang Diinginkan</b>
+                                                <br>Setelah pewarnaan awal, kain batik seringkali harus melalui tahap pengembangan warna. Ini adalah langkah penting dalam seni membatik, di mana warna-warna mendalam dan mencapai kecerahan yang diinginkan. Proses pengembangan warna ini melibatkan penggunaan larutan asam atau basa yang tepat untuk mengunci warna dan menghasilkan hasil yang lebih tahan lama.
+                                            </p>
+                                        </li>
+                                        <li>
+                                            <p>
+                                                <b>Eksperimen dengan Teknik Pewarnaan</b><br>
+                                                <img src="img/Materi/Artikel 2.1.png" class="mt-10 mb-15" alt="">
+                                                <br>Pemahaman tentang konsep asam-basa juga membuka pintu untuk eksperimen dengan teknik pewarnaan yang lebih kompleks dalam seni membatik. Seniman dapat menciptakan efek-efek khusus dengan menggunakan teknik seperti tie-dye atau shibori, yang memanfaatkan sifat-sifat asam-basa dalam proses pewarnaan. Ini memungkinkan seniman untuk menciptakan karya seni yang lebih kreatif dan unik.
+                                            </p>
+                                        </li>
+                                        <li>
+                                            <p>
+                                                <b>Keberlanjutan dan Ramah Lingkungan</b>
+                                                <br>Dalam upaya menjaga keberlanjutan dan ramah lingkungan, pengetahuan tentang asam-basa juga dapat digunakan untuk memilih pewarna yang lebih ramah lingkungan dan aman bagi lingkungan. Pewarna alami yang berasal dari tanaman atau serangga seringkali memanfaatkan sifat asam-basa dalam proses pewarnaan.
+                                            </p>
+                                        </li>
+                                    </ol>
+                                    <b>Penutup</b>
                                     <br><img src="img/Materi/Artikel 2.2.jpg" alt="">
                                     <br>Belajar tentang konsep asam-basa dalam seni membatik bukan hanya meningkatkan kualitas hasil akhir, tetapi juga membuka peluang eksperimen dan inovasi dalam seni ini. Penggunaan yang tepat dari asam dan basa adalah kunci keberhasilan dalam menciptakan warna-warna yang memukau dan tahan lama pada kain batik. Dengan demikian, pemahaman tentang asam-basa harus dianggap sebagai elemen penting dalam pembelajaran seni membatik yang komprehensif.
                                 </p>
